force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Used for quality control on de-dupe process for outside sales, June 2018</description>
    <displayFormat>A-{00000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>