force-app/main/default/objects/Account/fields/ACOG_List__c.field-meta.xml
<CustomField>
    <fullName>ACOG_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>List purchased May 2019.</description>
    <label>ACOG List</label>
    <type>Checkbox</type>
</CustomField>