force-app/main/default/objects/Account/fields/Active_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Status_Date__c</fullName>
    <label>Active Status Date</label>
    <type>Date</type>
</CustomField>