force-app/main/default/objects/Account/fields/Agreement_Cancel_Date_Acct__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Cancel_Date_Acct__c</fullName>
    <label>Agreement Cancel Date</label>
    <type>Date</type>
</CustomField>