force-app/main/default/objects/Account/fields/Agreement_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Review_Date__c</fullName>
    <description>Used by Nina to track when she reviews the HCP contracts for an Account.</description>
    <label>Agreement Review Date</label>
    <type>Date</type>
</CustomField>