force-app/main/default/objects/Account/fields/Agreement_Status_Account__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status_Account__c</fullName>
    <inlineHelpText>Use this to set the status of the relationship. Old, do not use.</inlineHelpText>
    <label>Agreement Status Account OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Follow Up Call Set</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Letter Sent</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Signed / Returned</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Partnered</fullName>
                <isActive>false</isActive>
                <label>Partnered</label>
            </value>
            <value>
                <fullName>Partnered without Agreement</fullName>
                <isActive>false</isActive>
                <label>Partnered without Agreement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>