force-app/main/default/objects/Account/fields/Americord_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Americord_Collateral__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if we have sent our collateral (Info kit, one sheets etc) to this business</inlineHelpText>
    <label>Americord Collateral</label>
    <type>Checkbox</type>
</CustomField>