force-app/main/default/objects/Account/fields/Americord_Link__c.field-meta.xml
<CustomField>
    <fullName>Americord_Link__c</fullName>
    <inlineHelpText>Link that we have sent to partner to put on their website</inlineHelpText>
    <label>Americord Link</label>
    <type>Url</type>
</CustomField>