force-app/main/default/objects/Account/fields/Americord_Metadata_Tag__c.field-meta.xml
<CustomField>
    <fullName>Americord_Metadata_Tag__c</fullName>
    <description>This field will hold any tag/metadata that will allow you to filter records.</description>
    <label>Americord Metadata Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>