force-app/main/default/objects/Account/fields/Bizible_Touchpoint_Count__c.field-meta.xml
<CustomField>
    <fullName>Bizible_Touchpoint_Count__c</fullName>
    <description>Uses roll-up helper to count bizible touchpoints.</description>
    <label>Bizible Touchpoint Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>