force-app/main/default/objects/Account/fields/Bizible_Touchpoint_Count_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Bizible_Touchpoint_Count_Inside_Sales__c</fullName>
    <description>Populated by Roll-up Helper</description>
    <label>Bizible Touchpoint Count (Inside Sales)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>