force-app/main/default/objects/Account/fields/Brochure_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Sent_Date__c</fullName>
    <description>Used by Outreach Program to track the date that brochures were first sent.</description>
    <label>Brochure Sent Date</label>
    <type>Date</type>
</CustomField>