force-app/main/default/objects/Account/fields/Brochures__c.field-meta.xml
<CustomField>
    <fullName>Brochures__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if we have sent Americord brochures to this office.</inlineHelpText>
    <label>Brochures</label>
    <type>Checkbox</type>
</CustomField>