force-app/main/default/objects/Account/fields/Call_Count_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Call_Count_Inbound__c</fullName>
    <description>Fastcall Inbound Call Count</description>
    <label>Call Count Inbound</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>