force-app/main/default/objects/Account/fields/Called_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Called_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate that the prospect was called and a message was left or that a conversation took place.</inlineHelpText>
    <label>Called 1x</label>
    <type>Checkbox</type>
</CustomField>