force-app/main/default/objects/Account/fields/Client_Check_in_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Check_in_Notes__c</fullName>
    <description>This field will capture the client checkin notes.</description>
    <label>Client Check-in Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>