force-app/main/default/objects/Account/fields/Client_Check_in_Rep__c.field-meta.xml
<CustomField>
    <fullName>Client_Check_in_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will hold the user/rep that is going to be calling the client for the check-in.</description>
    <label>Client Check-in Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>