force-app/main/default/objects/Account/fields/Client_Has_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Client_Has_Lifetime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkboxes that attempts to capture if the client has already upgraded the orders/invoices to lifetime.</description>
    <inlineHelpText>Checkboxes that attempts to capture if the client has already upgraded the orders/invoices to lifetime.</inlineHelpText>
    <label>Client Has Lifetime</label>
    <type>Checkbox</type>
</CustomField>