force-app/main/default/objects/Account/fields/Client_Portal__c.field-meta.xml
<CustomField>
    <fullName>Client_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record will display in Client Portal</description>
    <label>Client Portal</label>
    <type>Checkbox</type>
</CustomField>