force-app/main/default/objects/Account/fields/Client_requested_a_call__c.field-meta.xml
<CustomField>
    <fullName>Client_requested_a_call__c</fullName>
    <label>Client request a call?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Select One</fullName>
            </value>
            <value>
                <fullName>Yes, have a cord blood specialist call me.</fullName>
            </value>
            <value>
                <fullName>No, no need to contact me at this time.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>