force-app/main/default/objects/Account/fields/Combined_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Combined_Email_Address__c</fullName>
    <description>Combines Contact and Contact 2 Email Address from Opportunity; used with Duplicate Check to dedupe Accounts based on email address on Opportunity.</description>
    <label>Combined Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>