force-app/main/default/objects/Account/fields/Combined_Phone__c.field-meta.xml
<CustomField>
    <fullName>Combined_Phone__c</fullName>
    <description>Combined Contact and Contact 2 Phone from Opportunity. Used for Duplicate Check to dedupe Accounts based on Opportunity.</description>
    <label>Combined Phone</label>
    <length>45</length>
    <type>Text</type>
</CustomField>