force-app/main/default/objects/Account/fields/Commission_Created__c.field-meta.xml
<CustomField>
    <fullName>Commission_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track when a Commission Record is already created for the referrer of this account. Used to eliminate duplicates.</description>
    <label>Commission Created</label>
    <type>Checkbox</type>
</CustomField>