force-app/main/default/objects/Account/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to track when commission is paid to the referrer for this account, used to prevent duplicate commissions and duplicate payments</description>
    <label>Commission Paid</label>
    <type>Checkbox</type>
</CustomField>