force-app/main/default/objects/Account/fields/ControlNumber__c.field-meta.xml
<CustomField>
    <fullName>ControlNumber__c</fullName>
    <description>temp field used to map account to contact for doctor record import</description>
    <label>Control Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>