force-app/main/default/objects/Account/fields/Count_Mothers_Fathers__c.field-meta.xml
<CustomField>
    <fullName>Count_Mothers_Fathers__c</fullName>
    <description>Count Mothers &amp; Fathers using Roll-up Helper. Used to identify accounts that have been incorrectly merged. Field is populated by rollup/DLRS - Account_Count_Mothers_Fathers</description>
    <label>Count Mothers &amp; Fathers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>