force-app/main/default/objects/Account/fields/CRMG_Map__Auto_Convert_Phone__c.field-meta.xml
<CustomField>
    <fullName>CRMG_Map__Auto_Convert_Phone__c</fullName>
    <label>Auto Convert Phone</label>
    <type>Phone</type>
</CustomField>