force-app/main/default/objects/Account/fields/Dialpad__IsCreatedFromDialpad__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__IsCreatedFromDialpad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The check box will be set to true if the Account is created from Dialpad</description>
    <label>IsCreatedFromDialpad</label>
    <type>Checkbox</type>
</CustomField>