force-app/main/default/objects/Account/fields/donation_reconsider__c.field-meta.xml
<CustomField>
    <fullName>donation_reconsider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for WTE Survey</description>
    <label>donation reconsider</label>
    <type>Checkbox</type>
</CustomField>