force-app/main/default/objects/Account/fields/Email_1x__c.field-meta.xml
<CustomField>
    <fullName>Email_1x__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate that a second marketing email was sent to the client.</inlineHelpText>
    <label>Email 2x</label>
    <type>Checkbox</type>
</CustomField>