force-app/main/default/objects/Account/fields/EZsms__c.field-meta.xml
<CustomField>
    <fullName>EZsms__c</fullName>
    <description>This is the date that a marketing sms was sent to the lead.</description>
    <label>EZsms</label>
    <type>Date</type>
</CustomField>