force-app/main/default/objects/Account/fields/EZvm__c.field-meta.xml
<CustomField>
    <fullName>EZvm__c</fullName>
    <description>This is the date that a recorded message was sent to the lead.</description>
    <label>EZvm</label>
    <type>Date</type>
</CustomField>