force-app/main/default/objects/Account/fields/Field_Rep_Special_Commission__c.field-meta.xml
<CustomField>
    <fullName>Field_Rep_Special_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Jean to track those accounts that will be included in the special commission being paid to ex Field Reps.</description>
    <label>Field Rep Special Commission</label>
    <type>Checkbox</type>
</CustomField>