force-app/main/default/objects/Account/fields/Firm_Up_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Firm_Up_Call_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when the firm up call is completed</description>
    <label>Firm Up Call Completed</label>
    <type>Checkbox</type>
</CustomField>