force-app/main/default/objects/Account/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <description>Date to follow up with client</description>
    <label>Follow Up</label>
    <type>Date</type>
</CustomField>