force-app/main/default/objects/Account/fields/fw1__Batch_Statement_Next_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Batch_Statement_Next_Run_Date__c</fullName>
    <label>Batch Statement Next Run Date</label>
    <type>DateTime</type>
</CustomField>