force-app/main/default/objects/Account/fields/fw1__Batch_Statement_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Batch_Statement_Schedule_Id__c</fullName>
    <label>Batch Statement Schedule Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>