force-app/main/default/objects/Account/fields/fw1__Exclude_in_Batch_Statement__c.field-meta.xml
<CustomField>
    <fullName>fw1__Exclude_in_Batch_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude in Batch Statement</label>
    <type>Checkbox</type>
</CustomField>