force-app/main/default/objects/Account/fields/fw1__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>fw1__SLAExpirationDate__c</fullName>
    <label>zSLA Expiration Date - OBSOLETE</label>
    <type>Date</type>
</CustomField>