force-app/main/default/objects/Account/fields/Google_Review__c.field-meta.xml
<CustomField>
    <fullName>Google_Review__c</fullName>
    <label>Google Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Google_Review</valueSetName>
    </valueSet>
</CustomField>