force-app/main/default/objects/Account/fields/HCP_Agreement__c.field-meta.xml
<CustomField>
    <fullName>HCP_Agreement__c</fullName>
    <inlineHelpText>Use this to set the status of the relationship</inlineHelpText>
    <label>HCP Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Send FAX</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Signed / Returned</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>No Stipend</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>W-9 Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>