force-app/main/default/objects/Account/fields/HCP_Agreement_Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>HCP_Agreement_Attachment_ID__c</fullName>
    <label>HCP Agreement Attachment ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>