force-app/main/default/objects/Account/fields/HCP_Agreement_Notes__c.field-meta.xml
<CustomField>
    <fullName>HCP_Agreement_Notes__c</fullName>
    <description>Used to track problems or inconsistencies with HCP Agreements.</description>
    <label>HCP Agreement Notes</label>
    <type>TextArea</type>
</CustomField>