force-app/main/default/objects/Account/fields/HCP_Practice_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HCP_Practice_Revenue__c</fullName>
    <label>HCP Practice Revenue</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>