force-app/main/default/objects/Account/fields/HCP_Status__c.field-meta.xml
<CustomField>
    <fullName>HCP_Status__c</fullName>
    <formula>IF (
AND(
  NOT(ISNULL(Territory__c)), 
  CONTAINS(TEXT(HCP_Agreement__c), &quot;Signed&quot;) || CONTAINS(TEXT(HCP_Agreement__c), &quot;No Stipend&quot;) ||  CONTAINS(TEXT(HCP_Agreement__c), &quot;W-9 Only&quot;) ,
  Ninety_Days_Activity__c &gt; 0), &quot;Active&quot;, 
IF (
AND(
  NOT(ISBLANK(Territory__c)), 
  CONTAINS(TEXT(HCP_Agreement__c), &quot;Signed&quot;) || CONTAINS(TEXT(HCP_Agreement__c), &quot;No Stipend&quot;) || CONTAINS(TEXT(HCP_Agreement__c), &quot;W-9 Only&quot;),
  Ninety_Days_Activity__c &lt; 1), &quot;Passive&quot;,
IF (
AND(
   Owner.Start_Date__c &gt; (today() - 100), 
  NOT(ISNULL(Territory__c)), 
  Ninety_Days_Activity__c &gt; 2), &quot;Active&quot;,

 NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Status</label>
    <type>Text</type>
</CustomField>