force-app/main/default/objects/Account/fields/How_did_you_find_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_us__c</fullName>
    <label>How did you find us?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>