force-app/main/default/objects/Account/fields/How_did_you_learn_about_Americord__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_learn_about_Americord__c</fullName>
    <description>Populated from Info Kit text box.</description>
    <label>How did you learn about Americord?</label>
    <type>TextArea</type>
</CustomField>