force-app/main/default/objects/Account/fields/Info_Kit__c.field-meta.xml
<CustomField>
    <fullName>Info_Kit__c</fullName>
    <label>Info Kit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>