force-app/main/default/objects/Account/fields/knowledgeaboutcordbloodbanking__c.field-meta.xml
<CustomField>
    <fullName>knowledgeaboutcordbloodbanking__c</fullName>
    <label>Knowledge about cord blood banking</label>
    <length>40</length>
    <type>Text</type>
</CustomField>