force-app/main/default/objects/Account/fields/Lab_ID__c.field-meta.xml
<CustomField>
    <fullName>Lab_ID__c</fullName>
    <description>Used when importing doctor records in order to create relationship between new records and lab records.</description>
    <label>Lab ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>