force-app/main/default/objects/Account/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if we have created a landing page for this partnership</inlineHelpText>
    <label>Landing Page</label>
    <type>Checkbox</type>
</CustomField>