force-app/main/default/objects/Account/fields/Last_Activity_Field_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Field_Sales__c</fullName>
    <label>Last Activity (Field Sales)</label>
    <type>DateTime</type>
</CustomField>