force-app/main/default/objects/Account/fields/Last_Client_Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Check_in_Date__c</fullName>
    <description>This is the date the client was contacted for a check-in.</description>
    <label>Last Client Check-in Date</label>
    <type>Date</type>
</CustomField>