force-app/main/default/objects/Account/fields/Link_Swap__c.field-meta.xml
<CustomField>
    <fullName>Link_Swap__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this partner wishes to exchange link to each others websites.</inlineHelpText>
    <label>Link Swap</label>
    <type>Checkbox</type>
</CustomField>